--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <body>
 
-      <h1>Support/h1>
+      <h1>Support</h1>
       <h2>For any issues regarding the app, contact me at:</h2>
       <h2>desperateapps@gmail.com</h2>
 
